full-moon/tests/cfxlua_cases/fail/parser/set_constructor/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cfxlua_cases/fail/parser/set_constructor
---
error[ast]: expected identifier after `.`
  ┌─ source.lua:1:9
  │
1 │ t = { . }
  │         ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:9
  │
1 │ t = { . }
  │         ^
